--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,22 +1,26 @@
-<form class="form-horizontal">
-  <div class="form-group">
-    <label for="inputUsername" class="col-sm-2 control-label">Username</label>
-    <div class="col-sm-10">
-      <input type="text" ng-model="username" class="form-control" id="inputUsername" placeholder="Username">
-    </div>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <form class="form-horizontal">
+      <div class="form-group">
+        <label for="inputUsername" class="col-sm-2 control-label">Username</label>
+        <div class="col-sm-10">
+          <input type="text" ng-model="username" class="form-control" id="inputUsername" placeholder="Username">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        <div class="col-sm-10">
+          <input type="password" ng-model="password" class="form-control" id="inputPassword3" placeholder="Password">
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-3 pull-right">
+          <button type="button" class="btn btn-default btn-block" ng-click="login(username, password)">Log in</button>
+        </div>
+        <div class="col-sm-3 pull-right">
+          <button type="button" class="btn btn-primary btn-block" ng-click="signup(username, password)">Sign up</button>
+        </div>
+      </div>
+    </form>
   </div>
-  <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" ng-model="password" class="form-control" id="inputPassword3" placeholder="Password">
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-6">
-      <button type="button" class="btn btn-default" ng-click="login(username, password)">Log in</button>
-    </div>
-    <div class="col-sm-6">
-      <button type="button" class="btn btn-default" ng-click="signup(username, password)">Sign up</button>
-    </div>
-  </div>
-</form>
+</div>
