--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,46 +1,48 @@
-<div class="row">
-    <div class="col-sm-12 margin-top-25">
-        <form class="form-inline" ng-submit="createRoom(roomname)">
-            <div class="form-group">
-                <label class="sr-only" for="createRoom">Room name</label>
-                <div class="input-group">
-                    <input type="text" class="form-control" id="createRoom" placeholder="Name" ng-model="roomname">
+<div id="home">
+    <div class="row">
+        <div class="col-sm-12 margin-top-25">
+            <form class="form-inline" ng-submit="createRoom(roomname)">
+                <div class="form-group">
+                    <label class="sr-only" for="createRoom">Room name</label>
+                    <div class="input-group">
+                        <input type="text" class="form-control" id="createRoom" placeholder="Name" ng-model="roomname">
+                    </div>
                 </div>
+                <button type="submit" class="btn btn-primary">Create room</button>
+            </form>
+        </div>
+    </div>
+    <div class="page-header">
+        <h2>Rooms joined</h2>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="btn-group" ng-repeat="room in joinedRooms">
+                <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{room.name}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li ng-click="leaveRoom(room)"><a href="#">Leave room</a></li>
+                    <li><a ng-href="/notifications/{{room._id}}">Goto room</a></li>
+                </ul>
             </div>
-            <button type="submit" class="btn btn-primary">Create room</button>
-        </form>
-    </div>
-</div>
-<div class="page-header">
-    <h2>Rooms joined</h2>
-</div>
-<div class="row">
-    <div class="col-sm-12">
-        <div class="btn-group" ng-repeat="room in joinedRooms">
-            <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{room}} <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li ng-click="leaveRoom(room)"><a href="#">Leave room</a></li>
-                <li><a ng-href="/notifications/{{room}}">Goto room</a></li>
-            </ul>
+            <div ng-hide="joinedRooms.length" class="alert alert-warning" role="alert">You haven't join any room yet, that's sad!</div>
         </div>
-        <div ng-hide="joinedRooms.length" class="alert alert-warning" role="alert">You haven't join any room yet, that's sad!</div>
     </div>
-</div>
-<div class="page-header">
-    <h2>Yet to join!</h2>
-</div>
-<div class="row">
-    <div class="col-sm-12">
-        <div class="btn-group" ng-repeat="room in otherRooms">
-            <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{room}} <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-                <li ng-click="joinRoom(room)"><a href="#">Join room</a></li>
-            </ul>
+    <div class="page-header">
+        <h2>Yet to join!</h2>
+    </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="btn-group" ng-repeat="room in otherRooms">
+                <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{room.name}} <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li ng-click="joinRoom(room)"><a href="#">Join room</a></li>
+                </ul>
+            </div>
+            <div ng-hide="otherRooms.length" class="alert alert-info" role="alert">Do you realize that you can join more rooms?</div>
         </div>
-        <div ng-hide="otherRooms.length" class="alert alert-info" role="alert">Do you realize that you can join more rooms?</div>
     </div>
 </div>
