--- a/public/views/login.html
+++ b/public/views/login.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
+    <div ng-show="message" class="alert" ng-class="{'alert-danger': isError, 'alert-success': !isError}" role="alert">{{message}}</div>
     <form class="form-horizontal">
       <div class="form-group">
         <label for="inputUsername" class="col-sm-2 control-label">Username</label>
