--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,9 @@ body {
 	display: inline-block;
 	margin-left: 10px;
 }
-#home .btn-group {
+.space-out{
 	margin-right: 10px;
-	margin-bottom: 10px;
+	margin-bottom: 10px;	
 }
 h1 a {
 	text-decoration: none;
