--- a/public/views/room.html
+++ b/public/views/room.html
@@ -5,7 +5,7 @@
     <div ng-show="message" class="alert" ng-class="{'alert-danger': isError, 'alert-success': !isError}" role="alert">{{message}}</div>
     <div class="row">
         <div class="col-sm-12">
-            <button type="button" ng-repeat="user in users" class="btn btn-default space-out" disabled="disabled">{{user.username}}</button>
+            <button type="button" ng-repeat="user in users" class="btn btn-default space-out" ng-class="{'btn-success': user.isOnline}" disabled="disabled">{{user.username}}</button>
         </div>
     </div>
     <hr>
